data/derived/fa15/progs/unify/prog2359.ml.out
Characters 87-91:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type ('a -> 'b) -> int
       but an expression was expected of type ('a -> 'b) -> 'a -> 'b
       Type int is not compatible with type 'a -> 'b 
